add register and login API and integrate in client

--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,117 +1,156 @@
-.navbar{
-    padding: 20px 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.navbar {
+  padding: 20px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.navbar .logo{
-    width: 150px;
+.navbar .logo {
+  width: 150px;
 }
 
-.navbar-menu{
-    display: flex;
-    list-style: none;
-    gap: 20px;
-    color: #49557e;
-    font-size: 18px;
+.navbar-menu {
+  display: flex;
+  list-style: none;
+  gap: 20px;
+  color: #49557e;
+  font-size: 18px;
 }
-.navbar-menu li{
-    cursor: pointer;
-}
-
-.navbar .active{
-    padding-bottom: 2px;
-    border-bottom: 2px solid #49557e;
+.navbar-menu li {
+  cursor: pointer;
 }
 
-.navbar-right{
-    display: flex;
-    align-items: center;
-    gap: 40px; 
+.navbar .active {
+  padding-bottom: 2px;
+  border-bottom: 2px solid #49557e;
 }
 
-.navbar button{
-    background-color: transparent;
-    font-size: 16px;
-    color:  #49557e;
-    border: 1px solid tomato;
-    padding: 10px 30px;
-    border-radius: 50px;
-    cursor: pointer;
-    transition: 0.3s;
+.navbar-right {
+  display: flex;
+  align-items: center;
+  gap: 40px;
 }
 
-.navbar button:hover{
-    background-color:  #fff4f2;
+.navbar button {
+  background-color: transparent;
+  font-size: 16px;
+  color: #49557e;
+  border: 1px solid tomato;
+  padding: 10px 30px;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.navbar button:hover {
+  background-color: #fff4f2;
 }
 
 .navbar-search-icon {
-    position: relative;
+  position: relative;
 }
 
-.navbar-search-icon .dot{
-    position: absolute;
-    min-width: 10px;
-    min-height: 10px;
-    background: tomato;
-    border-radius: 5px;
-    top: -8px;
-    right: -8px;
+.navbar-search-icon .dot {
+  position: absolute;
+  min-width: 10px;
+  min-height: 10px;
+  background: tomato;
+  border-radius: 5px;
+  top: -8px;
+  right: -8px;
 }
 
-@media (max-width:1050px){
-    .navbar .logo{
-        width: 140px;
-    }
-    .navbar-menu{
-        gap: 20px;
-        font-size: 17px;
-    }
-    .navbar-right{
-        gap: 30px;
-
-    }
-    .navbar-right img{
-        width: 22px;
-    }
-    .navbar-right button{
-        padding: 8px 25px;
-    }
+.navbar-profile {
+  position: relative;
+  cursor: pointer;
 }
 
-@media (max-width:900px){
-    .navbar .logo{
-        width: 120px;
-    }
-    .navbar-menu{
-        gap: 15px;
-        font-size: 16px;
-    }
-    .navbar-right{
-        gap: 20px;
-
-    }
-    .navbar-right img{
-        width: 20px;
-    }
-    .navbar-right button{
-        padding: 7px 20px;
-        font-size: 15px;
-    }
+.nav-profile-dropdown {
+  position: absolute;
+  display: none;
+  right: 0;
+  z-index: 10;
 }
 
-@media (max-width:750px){
-    .navbar .logo{
-        width: 100px;
-    }
-    .navbar-menu{
-        display: none;
-    }
-    .navbar-right{
-        gap: 10px;
-    }
-    .navbar-right button{
-        padding: 6px 15px;
-    }
+.navbar-profile:hover .nav-profile-dropdown {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background-color: #ffedea;
+  padding: 12px 25px;
+  border-radius: 10px;
+  background: linear-gradient(35deg, #fffefa, #e6d5d3);
+  box-shadow: 10px 10px 15px #d9c9c7, -5px 0px 10px #ffffff;
+  list-style: none;
+}
+
+.nav-profile-dropdown li {
+  cursor: pointer;
+  color: #49557e;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.nav-profile-dropdown img{
+    width: 20px;
+}
+
+.nav-profile-dropdown li:hover {
+  color: tomato;
+}
+
+@media (max-width: 1050px) {
+  .navbar .logo {
+    width: 140px;
+  }
+  .navbar-menu {
+    gap: 20px;
+    font-size: 17px;
+  }
+  .navbar-right {
+    gap: 30px;
+  }
+  .navbar-right img {
+    width: 22px;
+  }
+  .navbar-right button {
+    padding: 8px 25px;
+  }
+}
+
+@media (max-width: 900px) {
+  .navbar .logo {
+    width: 120px;
+  }
+  .navbar-menu {
+    gap: 15px;
+    font-size: 16px;
+  }
+  .navbar-right {
+    gap: 20px;
+  }
+  .navbar-right img {
+    width: 20px;
+  }
+  .navbar-right button {
+    padding: 7px 20px;
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 750px) {
+  .navbar .logo {
+    width: 100px;
+  }
+  .navbar-menu {
+    display: none;
+  }
+  .navbar-right {
+    gap: 10px;
+  }
+  .navbar-right button {
+    padding: 6px 15px;
+  }
 }
