--- a/admin/src/components/FoodItem/FoodItem.css
+++ b/admin/src/components/FoodItem/FoodItem.css
@@ -9,11 +9,22 @@
 
 .food-item-image{
     width: 100%;
+    height: 100px;
     border-radius: 15px 15px 0 0;
 }
 
+.info-block{
+        padding: 20px;
+        overflow: hidden;
+
+}
+
 .food-item-info{
-    padding: 20px;
+    padding: 10px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
 }
 
 .food-item-name-rating{
@@ -51,33 +62,15 @@
     font-weight: 500;
     margin: 10px 0;
 }
-
-.food-item-img-container{
-    position: relative;
-}
-.food-item-img-container .add{
-    width: 35px;
-    position: absolute;
-    bottom: 15px;
-    right: 15px;
+.food-item button{
+    background-color: tomato;
+    font-size: 15px;
+    font-weight: 500;
+    padding: 5px 12px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
     cursor: pointer;
-    border-radius: 50%;
-}
-
-.food-item-img-container .food-item-counter{
-    position: absolute;
-    bottom: 15px;
-    right: 15px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    padding: 6px;
-    border-radius: 50px;
-    background-color: white;
-}
-
-.food-item-img-container .food-item-counter img{
-    width: 30px;
-    height: 25px;
-    cursor: pointer;
+    color: #000;
+    width: 100%;
 }
